[package]
name = "twitch"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
memmap2 = "0.9.4"
# reqwest = "0.11"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
# twitch_api = { version = "0.7.0-rc.7", features = ["all", "eventsub", "helix", "reqwest"] }
twitch_eventsub = "0.1.1"
